// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RotateDocument component Should render without crashing 1`] = `<RotateDocumentWidget />`;

exports[`RotateDocument component Should render without crashing with mode param 1`] = `
<RotateDocumentWidget
  mode={0}
/>
`;

exports[`RotateDocument component Should render without crashing with mode param 2`] = `
<RotateDocumentWidget
  mode={1}
/>
`;

exports[`RotateDocument component Should render without crashing with mode param 3`] = `
<RotateDocumentWidget
  mode={2}
/>
`;
